--- a/src/app/pages/checklist/checklist.page.html
+++ b/src/app/pages/checklist/checklist.page.html
@@ -47,9 +47,9 @@ icon>
       <img src="assets/images/logo.png" />
     </ion-title>
     <ion-buttons slot="end">
-      <!-- <ion-button (click)="addChecklist()">
+      <ion-button (click)="addChecklist()">
         <ion-icon slot="icon-only" name="add"></ion-icon>
-      </ion-button> -->
+      </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -67,17 +67,18 @@ icon>
           <span>0 items</span>
         </ion-item>
         <ion-item-options side="end">
-          <!-- <ion-item-option color="light"
-(click)="renameChecklist(checklist)">
-            <ion-icon slot="icon-only" name="clipboard"></ion-
-icon>
-          </ion-item-option> -->
-          <!-- <ion-item-option color="danger"
-(click)="removeChecklist(checklist)">
+          <ion-item-option color="light" (click)="renameChecklist()">
+            <ion-icon slot="icon-only" name="clipboard"></ion-icon>
+          </ion-item-option>
+          <ion-item-option color="danger" (click)="removeChecklist()">
             <ion-icon slot="icon-only" name="trash"></ion-icon>
-          </ion-item-option> -->
+          </ion-item-option>
         </ion-item-options>
       </ion-item-sliding>
+      <ion-item *ngFor="let checkListItem of checklists">
+        <ion-label>{{checkListItem}}</ion-label>
+        <span>0 items</span>
+      </ion-item>
     </ion-list>
   </div>
 </ion-content>
